VPC-with-3AZ/cdk.out/VpcWith3AzStack.template.json
{
  "Resources": {
    "Vpc8378EB38": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcWith3AzStack/Vpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/Vpc/Resource"
      }
    },
    "VpcingressSubnet1Subnet059F22C6": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.0.0/24",
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "AvailabilityZone": "ap-southeast-1a",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "ingress"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "VpcWith3AzStack/Vpc/ingressSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/Vpc/ingressSubnet1/Subnet"
      }
    },
    "VpcingressSubnet1RouteTable804C7A26": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcWith3AzStack/Vpc/ingressSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/Vpc/ingressSubnet1/RouteTable"
      }
    },
    "VpcingressSubnet1RouteTableAssociation5DF54E70": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcingressSubnet1RouteTable804C7A26"
        },
        "SubnetId": {
          "Ref": "VpcingressSubnet1Subnet059F22C6"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/Vpc/ingressSubnet1/RouteTableAssociation"
      }
    },
    "VpcingressSubnet1DefaultRoute4188A546": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcingressSubnet1RouteTable804C7A26"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VpcIGWD7BA715C"
        }
      },
      "DependsOn": [
        "VpcVPCGWBF912B6E"
      ],
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/Vpc/ingressSubnet1/DefaultRoute"
      }
    },
    "VpcingressSubnet1EIPD1FA297B": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcWith3AzStack/Vpc/ingressSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/Vpc/ingressSubnet1/EIP"
      }
    },
    "VpcingressSubnet1NATGateway5ADD866D": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "SubnetId": {
          "Ref": "VpcingressSubnet1Subnet059F22C6"
        },
        "AllocationId": {
          "Fn::GetAtt": [
            "VpcingressSubnet1EIPD1FA297B",
            "AllocationId"
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcWith3AzStack/Vpc/ingressSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/Vpc/ingressSubnet1/NATGateway"
      }
    },
    "VpcingressSubnet2SubnetF175D754": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.1.0/24",
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "AvailabilityZone": "ap-southeast-1b",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "ingress"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "VpcWith3AzStack/Vpc/ingressSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/Vpc/ingressSubnet2/Subnet"
      }
    },
    "VpcingressSubnet2RouteTable8B0E23A7": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcWith3AzStack/Vpc/ingressSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/Vpc/ingressSubnet2/RouteTable"
      }
    },
    "VpcingressSubnet2RouteTableAssociation39E1BA3A": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcingressSubnet2RouteTable8B0E23A7"
        },
        "SubnetId": {
          "Ref": "VpcingressSubnet2SubnetF175D754"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/Vpc/ingressSubnet2/RouteTableAssociation"
      }
    },
    "VpcingressSubnet2DefaultRoute18203BC3": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcingressSubnet2RouteTable8B0E23A7"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VpcIGWD7BA715C"
        }
      },
      "DependsOn": [
        "VpcVPCGWBF912B6E"
      ],
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/Vpc/ingressSubnet2/DefaultRoute"
      }
    },
    "VpcingressSubnet3Subnet349C9312": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.2.0/24",
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "AvailabilityZone": "ap-southeast-1c",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "ingress"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "VpcWith3AzStack/Vpc/ingressSubnet3"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/Vpc/ingressSubnet3/Subnet"
      }
    },
    "VpcingressSubnet3RouteTable437A5D75": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcWith3AzStack/Vpc/ingressSubnet3"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/Vpc/ingressSubnet3/RouteTable"
      }
    },
    "VpcingressSubnet3RouteTableAssociation2BCEBB48": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcingressSubnet3RouteTable437A5D75"
        },
        "SubnetId": {
          "Ref": "VpcingressSubnet3Subnet349C9312"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/Vpc/ingressSubnet3/RouteTableAssociation"
      }
    },
    "VpcingressSubnet3DefaultRoute61F379BE": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcingressSubnet3RouteTable437A5D75"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VpcIGWD7BA715C"
        }
      },
      "DependsOn": [
        "VpcVPCGWBF912B6E"
      ],
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/Vpc/ingressSubnet3/DefaultRoute"
      }
    },
    "VpcapplicationSubnet1Subnet8B68205B": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.3.0/24",
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "AvailabilityZone": "ap-southeast-1a",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "application"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "VpcWith3AzStack/Vpc/applicationSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/Vpc/applicationSubnet1/Subnet"
      }
    },
    "VpcapplicationSubnet1RouteTableF03E8296": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcWith3AzStack/Vpc/applicationSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/Vpc/applicationSubnet1/RouteTable"
      }
    },
    "VpcapplicationSubnet1RouteTableAssociation75D5245D": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcapplicationSubnet1RouteTableF03E8296"
        },
        "SubnetId": {
          "Ref": "VpcapplicationSubnet1Subnet8B68205B"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/Vpc/applicationSubnet1/RouteTableAssociation"
      }
    },
    "VpcapplicationSubnet1DefaultRouteD1F37131": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcapplicationSubnet1RouteTableF03E8296"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "VpcingressSubnet1NATGateway5ADD866D"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/Vpc/applicationSubnet1/DefaultRoute"
      }
    },
    "VpcapplicationSubnet2Subnet29670962": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.4.0/24",
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "AvailabilityZone": "ap-southeast-1b",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "application"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "VpcWith3AzStack/Vpc/applicationSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/Vpc/applicationSubnet2/Subnet"
      }
    },
    "VpcapplicationSubnet2RouteTable17378AED": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcWith3AzStack/Vpc/applicationSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/Vpc/applicationSubnet2/RouteTable"
      }
    },
    "VpcapplicationSubnet2RouteTableAssociationF25110CC": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcapplicationSubnet2RouteTable17378AED"
        },
        "SubnetId": {
          "Ref": "VpcapplicationSubnet2Subnet29670962"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/Vpc/applicationSubnet2/RouteTableAssociation"
      }
    },
    "VpcapplicationSubnet2DefaultRoute928D347B": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcapplicationSubnet2RouteTable17378AED"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "VpcingressSubnet1NATGateway5ADD866D"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/Vpc/applicationSubnet2/DefaultRoute"
      }
    },
    "VpcapplicationSubnet3SubnetB937EB65": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.5.0/24",
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "AvailabilityZone": "ap-southeast-1c",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "application"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "VpcWith3AzStack/Vpc/applicationSubnet3"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/Vpc/applicationSubnet3/Subnet"
      }
    },
    "VpcapplicationSubnet3RouteTable6E2E0D9E": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcWith3AzStack/Vpc/applicationSubnet3"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/Vpc/applicationSubnet3/RouteTable"
      }
    },
    "VpcapplicationSubnet3RouteTableAssociationD51CCB50": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcapplicationSubnet3RouteTable6E2E0D9E"
        },
        "SubnetId": {
          "Ref": "VpcapplicationSubnet3SubnetB937EB65"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/Vpc/applicationSubnet3/RouteTableAssociation"
      }
    },
    "VpcapplicationSubnet3DefaultRoute8AE3F963": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcapplicationSubnet3RouteTable6E2E0D9E"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "VpcingressSubnet1NATGateway5ADD866D"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/Vpc/applicationSubnet3/DefaultRoute"
      }
    },
    "VpcrdsSubnet1SubnetC2926CEA": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.6.0/28",
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "AvailabilityZone": "ap-southeast-1a",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "rds"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "VpcWith3AzStack/Vpc/rdsSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/Vpc/rdsSubnet1/Subnet"
      }
    },
    "VpcrdsSubnet1RouteTableE62E4ED6": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcWith3AzStack/Vpc/rdsSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/Vpc/rdsSubnet1/RouteTable"
      }
    },
    "VpcrdsSubnet1RouteTableAssociationE01668F2": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcrdsSubnet1RouteTableE62E4ED6"
        },
        "SubnetId": {
          "Ref": "VpcrdsSubnet1SubnetC2926CEA"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/Vpc/rdsSubnet1/RouteTableAssociation"
      }
    },
    "VpcrdsSubnet2Subnet70A835C8": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.6.16/28",
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "AvailabilityZone": "ap-southeast-1b",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "rds"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "VpcWith3AzStack/Vpc/rdsSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/Vpc/rdsSubnet2/Subnet"
      }
    },
    "VpcrdsSubnet2RouteTable3E531D9B": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcWith3AzStack/Vpc/rdsSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/Vpc/rdsSubnet2/RouteTable"
      }
    },
    "VpcrdsSubnet2RouteTableAssociation25A7BD68": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcrdsSubnet2RouteTable3E531D9B"
        },
        "SubnetId": {
          "Ref": "VpcrdsSubnet2Subnet70A835C8"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/Vpc/rdsSubnet2/RouteTableAssociation"
      }
    },
    "VpcrdsSubnet3SubnetAA566B5A": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.6.32/28",
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "AvailabilityZone": "ap-southeast-1c",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "rds"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "VpcWith3AzStack/Vpc/rdsSubnet3"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/Vpc/rdsSubnet3/Subnet"
      }
    },
    "VpcrdsSubnet3RouteTable75EBAB28": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcWith3AzStack/Vpc/rdsSubnet3"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/Vpc/rdsSubnet3/RouteTable"
      }
    },
    "VpcrdsSubnet3RouteTableAssociation1C0CEC6A": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcrdsSubnet3RouteTable75EBAB28"
        },
        "SubnetId": {
          "Ref": "VpcrdsSubnet3SubnetAA566B5A"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/Vpc/rdsSubnet3/RouteTableAssociation"
      }
    },
    "VpcIGWD7BA715C": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcWith3AzStack/Vpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/Vpc/IGW"
      }
    },
    "VpcVPCGWBF912B6E": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "Vpc8378EB38"
        },
        "InternetGatewayId": {
          "Ref": "VpcIGWD7BA715C"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/Vpc/VPCGW"
      }
    },
    "CDKMetadata": {
      "Type": "AWS::CDK::Metadata",
      "Properties": {
        "Analytics": "v2:deflate64:H4sIAAAAAAAA/0WPzQ6CMBCEn8V7qUqingkxhos2YLiaUtZYflpCtxBDeHeLoJxm9stkMuvT/YHuNrw3nshLr5IZHRLkoiQOPUD4dEgbQcKnSllImM0qKRKbKcCJrS7WFuHOswpWvrLAGC0kR6nVPzyZc8QmuXK8cISevwlrZefsWhwphNb5X2BeslwBuqmvGhSOJAajbSu+vTeLjZ13LXQkSudAC7Pt9id6dC8XRkqvtQplDTSe9QOI1NJZDgEAAA=="
      },
      "Metadata": {
        "aws:cdk:path": "VpcWith3AzStack/CDKMetadata/Default"
      }
    }
  },
  "Outputs": {
    "Region": {
      "Value": "ap-southeast-1"
    }
  },
  "Parameters": {
    "BootstrapVersion": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
    }
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5"
                  ],
                  {
                    "Ref": "BootstrapVersion"
                  }
                ]
              }
            ]
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
        }
      ]
    }
  }
}
